[gd_scene load_steps=6 format=3 uid="uid://cc0hgeurej3l3"]

[ext_resource type="Script" path="res://game/game.gd" id="1_pvmc2"]
[ext_resource type="PackedScene" uid="uid://ceoqe83vib611" path="res://game/block/block.tscn" id="1_v3k5f"]
[ext_resource type="PackedScene" uid="uid://b801c6kxvqcqp" path="res://game/generator.tscn" id="3_l5tyv"]
[ext_resource type="Texture2D" uid="uid://d08wr8iq3a86k" path="res://settings.png" id="4_2mrr3"]

[sub_resource type="LabelSettings" id="LabelSettings_hlxbp"]
font_size = 95

[node name="Node2D" type="Node2D"]
script = ExtResource("1_pvmc2")

[node name="Blocks" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 38.9999
offset_top = 610.0
offset_right = 667.0
offset_bottom = 1238.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.6, 1.6)

[node name="1" parent="Blocks" instance=ExtResource("1_v3k5f")]
offset_left = 0.0
offset_top = 0.0
offset_right = 205.0
offset_bottom = 205.0

[node name="2" parent="Blocks" instance=ExtResource("1_v3k5f")]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_top = 0.0
offset_right = 105.0
offset_bottom = 205.0
grow_horizontal = 2

[node name="3" parent="Blocks" instance=ExtResource("1_v3k5f")]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_top = 0.0
offset_right = 5.0
offset_bottom = 205.0
grow_horizontal = 0

[node name="4" parent="Blocks" instance=ExtResource("1_v3k5f")]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 0.0
offset_right = 205.0
offset_bottom = 105.0
grow_vertical = 2

[node name="5" parent="Blocks" instance=ExtResource("1_v3k5f")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 105.0
offset_bottom = 105.0
grow_horizontal = 2
grow_vertical = 2

[node name="6" parent="Blocks" instance=ExtResource("1_v3k5f")]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -200.0
offset_right = 5.0
offset_bottom = 105.0
grow_horizontal = 0
grow_vertical = 2

[node name="7" parent="Blocks" instance=ExtResource("1_v3k5f")]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = -200.0
offset_right = 205.0
offset_bottom = 5.0
grow_vertical = 0

[node name="8" parent="Blocks" instance=ExtResource("1_v3k5f")]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_top = -200.0
offset_right = 105.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 0

[node name="9" parent="Blocks" instance=ExtResource("1_v3k5f")]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -200.0
offset_right = 5.0
offset_bottom = 5.0
grow_horizontal = 0
grow_vertical = 0

[node name="Generator" parent="." instance=ExtResource("3_l5tyv")]

[node name="settings" type="Button" parent="."]
offset_left = 945.0
offset_top = 10.0
offset_right = 1154.0
offset_bottom = 221.0
scale = Vector2(0.6, 0.6)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0)
icon = ExtResource("4_2mrr3")
flat = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.424, 0.424, 0.424, 0.865)

[node name="Button" type="Button" parent="CanvasLayer"]
offset_left = 248.0
offset_top = 561.0
offset_right = 348.0
offset_bottom = 601.0
scale = Vector2(3, 3)
text = "New Puzzle
"

[node name="SpinBox" type="SpinBox" parent="CanvasLayer"]
offset_left = 587.0
offset_top = 560.0
offset_right = 687.0
offset_bottom = 600.0
scale = Vector2(3, 3)
min_value = 1.0
max_value = 4.0
value = 1.0
custom_arrow_step = 1.0

[node name="CheckBtn" type="Button" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -274.0
offset_top = -401.0
offset_right = -74.0
offset_bottom = -361.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3, 3)
text = "Check Puzzle"

[node name="Hints" type="Button" parent="CanvasLayer"]
offset_left = 266.0
offset_top = 892.0
offset_right = 466.0
offset_bottom = 929.0
scale = Vector2(3, 3)
text = "Show Hints"

[node name="ClearHints" type="Button" parent="CanvasLayer"]
offset_left = 266.0
offset_top = 1055.0
offset_right = 466.0
offset_bottom = 1092.0
scale = Vector2(3, 3)
text = "Clear Hints"

[node name="Label" type="Label" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -276.0
offset_top = 44.0
offset_right = 276.0
offset_bottom = 199.0
grow_horizontal = 2
text = "Just Sudoku"
label_settings = SubResource("LabelSettings_hlxbp")

[node name="close" type="Button" parent="CanvasLayer"]
offset_left = 266.0
offset_top = 1205.0
offset_right = 466.0
offset_bottom = 1245.0
scale = Vector2(3, 3)
text = "Close"

[connection signal="pressed" from="settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="CanvasLayer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayer/CheckBtn" to="." method="_on_check_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/Hints" to="." method="_on_hints_pressed"]
[connection signal="pressed" from="CanvasLayer/ClearHints" to="." method="_on_clear_hints_pressed"]
[connection signal="pressed" from="CanvasLayer/close" to="." method="_on_close_pressed"]
